# qt_cmake_project

./: .gitignore  CMakeLists.txt  README.md
BaseClass/: IBaseWindow.h  IModuleObject.h  IPageWindow.h
libCore/: CMakeLists.txt  MessageDialog.cpp  MessageDialog.h
mainProject/: CMakeLists.txt  QSingleApplication.cpp  QSingleApplication.h  main.cpp
mainProject/CfgFile/: AppCfg.ini
mainProject/Skins/: MainApp.qss
mainProject/SrcUI/: AboutGui.cpp  AboutGui.h  AboutGui.ui  DefaultPageWidget.cpp  DefaultPageWidget.h  DefaultPageWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Page_Button.cpp  Page_Button.h  PluginUpdateUi.cpp  PluginUpdateUi.h  PluginUpdateUi.ui  SystemSetUi.cpp  SystemSetUi.h  SystemSetUi.ui  TitleWidget.cpp  TitleWidget.h  TitleWidget.ui
